// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit user <UserForm /> renders as expected 1`] = `
<form
  className="iap-users-form"
  onSubmit={[Function]}
>
  <Field
    label="Username"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter username"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Email"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter email"
      type="text"
      value=""
    />
  </Field>
  <Toggle
    label="Edit Password"
    onChange={[Function]}
  />
  <footer
    className="iap-users-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save changes
    </Button>
    <Button
      Icon={null}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;

exports[`edit user <UserForm /> renders as expected in "edit password" mode 1`] = `
<form
  className="iap-users-form"
  onSubmit={[Function]}
>
  <Field
    label="Username"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter username"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Email"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter email"
      type="text"
      value=""
    />
  </Field>
  <Toggle
    label="Edit Password"
    onChange={[Function]}
  />
  <Field
    label="Password"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter new password"
      type="password"
      value=""
    />
  </Field>
  <Field
    label="Confirm Password"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="confirmPassword"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter new password"
      type="password"
      value=""
    />
  </Field>
  <footer
    className="iap-users-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save changes
    </Button>
    <Button
      Icon={null}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;

exports[`edit user <UserForm /> renders as expected with error 1`] = `
<form
  className="iap-users-form"
  onSubmit={[Function]}
>
  <FormErrorMessage
    error={[Error: error]}
  />
  <Field
    label="Username"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter username"
      type="text"
      value=""
    />
  </Field>
  <Field
    label="Email"
  >
    <Input
      Icon={null}
      disabled={false}
      errorMessage=""
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter email"
      type="text"
      value=""
    />
  </Field>
  <Toggle
    label="Edit Password"
    onChange={[Function]}
  />
  <footer
    className="iap-users-form__footer"
  >
    <Button
      Icon={[Function]}
      disabled={false}
      error={true}
      iconClassName=""
      onClick={null}
      stretch={false}
      transparent={false}
      type="submit"
    >
      Save changes
    </Button>
    <Button
      Icon={null}
      disabled={false}
      error={false}
      iconClassName=""
      onClick={[MockFunction]}
      stretch={false}
      transparent={true}
      type="button"
    >
      Cancel
    </Button>
  </footer>
</form>
`;
